chore: add styled-components

--- a/package.json
+++ b/package.json
@@ -39,5 +39,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "styled-components": "^5"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.24",
+    "babel-plugin-styled-components": "^2.0.6"
   }
 }
