feat: add 3D Universe model

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^8.18.6",
     "@react-three/fiber": "^7.0.26",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24",
+    "@types/three": "^0.138.0",
     "babel-plugin-styled-components": "^2.0.6"
   }
 }
