--- a/smartcontracts/package.json
+++ b/smartcontracts/package.json
@@ -9,6 +9,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "chai": "^4.3.6",
+    "dotenv": "^16.0.0",
     "erc721a": "^3.1.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.1",
